--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jiowhere">
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".HomePageActivity"></activity>
+        <activity android:name="RecommendationListActivity"></activity>
         <activity android:name=".SignInActivity" />
         <activity android:name=".RecommendationDetailsActivity" />
         <activity android:name=".MainActivity">
