--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <activity android:name=".RecommendingActivity"></activity>
         <activity android:name=".HomePageActivity" />
   
-        <activity android:name="RecommendationListActivity">
+        <activity android:name="RecommendationListActivity"></activity>
 
         <activity android:name=".SignInActivity" />
         <activity android:name=".RecommendationDetailsActivity" />
