--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:17.0.0'
     implementation 'com.firebase:firebase-client-android:2.5.0'
 
+    implementation 'com.google.android.gms:play-services-ads:9.4.0'
+
+    implementation 'com.google.firebase:firebase-core:9.4.0'
+
     android.defaultConfig.vectorDrawables.useSupportLibrary = true
 
 }
