--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jiowhere">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,16 +11,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".LeaveReviewActivity"></activity>
-
-        <activity android:name=".TagSystem" />
-        <activity android:name=".ReviewActivity" />
-
-        <activity android:name=".RecommendingActivity" />
+        <activity android:name=".RecommendingActivity"></activity>
         <activity android:name=".HomePageActivity" />
-        <activity android:name=".RecommendationListActivity" />
+  
+        <activity android:name="RecommendationListActivity"></activity>
+
         <activity android:name=".SignInActivity" />
         <activity android:name=".RecommendationDetailsActivity" />
+        <activity android:name=".TagSystem"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
