--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'com.firebase:firebase-client-android:2.5.0'
 
     implementation 'com.google.android.gms:play-services-ads:9.4.0'
+    implementation 'com.android.support:design:28.0.0'
 
     android.defaultConfig.vectorDrawables.useSupportLibrary = true
 
