--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.jiowhere">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -11,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SearchByLocationActivity"></activity>
+        <activity android:name=".SelectImageActivity"></activity>
+        <activity android:name=".SearchByLocationActivity" />
         <activity android:name=".UserProfileActivity" />
         <activity android:name=".ResetPasswordActivity" />
         <activity android:name=".TagSystemActivity" />
