--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:9.4.0'
     implementation 'com.android.support:design:28.0.0'
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     android.defaultConfig.vectorDrawables.useSupportLibrary = true
 }
 
