--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TestingActivity"></activity>
+        <activity android:name=".SelectMrtStationActivity"></activity>
+        <activity android:name=".TestingActivity" />
         <activity android:name=".SelectImageActivity" />
         <activity android:name=".SearchByLocationActivity" />
         <activity android:name=".UserProfileActivity" />
