--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-ads:9.4.0'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'org.jetbrains:annotations-java5:15.0'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
